HW4/javali_tests/others/new/HW3_MarLin/type_error/binary_op/ErrLogicBinOp1.javali
class Main {

   void main() {
      boolean b;
      int i;
      i = 1;
      b = true;
      b = b && i;
   }
}
